--- a/src/app/fixture/fixture.component.html
+++ b/src/app/fixture/fixture.component.html
@@ -13,12 +13,12 @@
 
   <div [ngSwitch]="viewMode">
     <div *ngSwitchCase="'odi'">
-        <div class="container fixtures-container">
+        <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="fixtures">
-                        <table width="100%" class="table ">
-                            <thead class="thead-dark">
+                        <table width="100%" class="table table-hover">
+                            <thead class="thead-primary">
                             <tr>
                                 <th>MatchNo</th>
                                 <th>Venue</th>
@@ -26,7 +26,7 @@
                                 
                             </tr>
                             </thead>
-                            <tbody class="Players-body table-striped">
+                            <tbody class="table-striped">
                                 <tr *ngFor="let match of matches">
                                     <td>{{ match.MatchNo }}</td>
                                     <td>{{ match.Venue }}</td>
