--- a/src/app/fixture/fixture.component.html
+++ b/src/app/fixture/fixture.component.html
@@ -1,3 +1,9 @@
+
+ <div class="center image-position">
+  <img width="300" alt="Angular Logo" src="/assets/Bangladesh.png">
+
+    <img width="200" alt="Angular Logo" src="/assets/wi.png">
+      </div>
 <ul class="nav nav-pills nav-fill nav-margin border border-primary">
     <li class="nav-item border border-primary" >
       <a class="nav-link nav-item" [class.active]="viewMode == 'odi'" (click)="viewMode='odi'" >ODI</a>
