--- a/src/app/fixture/fixture.component.css
+++ b/src/app/fixture/fixture.component.css
@@ -1,5 +1,10 @@
 .nav-margin{
-    margin-top: 200px;
+    margin-top: 20px;
+    
+}
+
+.image-position{
+   text-align: center;
 }
 
 .fixture-table{
