--- a/src/app/fixture/fixture.component.html
+++ b/src/app/fixture/fixture.component.html
@@ -25,7 +25,7 @@
                 <div class="col-md-12">
                     <div class="fixtures">
                         <table width="100%" class="table table-hover ">
-                            <thead class="thead-primary ">
+                            <thead class="thead-primary table-content ">
                             <tr>
                                 <th>MatchNo</th>
                                 <th>Venue</th>
@@ -33,7 +33,7 @@
                                 
                             </tr>
                             </thead>
-                            <tbody class="table-striped ">
+                            <tbody class="table-striped table-content ">
                                 <tr *ngFor="let match of odimatches">
                                     <td>{{ match.MatchNo }}</td>
                                     <td>{{ match.Venue }}</td>
@@ -55,7 +55,7 @@
                 <div class="col-md-12">
                     <div class="fixtures">
                         <table width="100%" class="table table-hover">
-                            <thead class="thead-primary">
+                            <thead class="thead-primary table-content">
                             <tr>
                                 <th>MatchNo</th>
                                 <th>Venue</th>
@@ -63,7 +63,7 @@
                                 
                             </tr>
                             </thead>
-                            <tbody class="table-striped">
+                            <tbody class="table-striped table-content">
                                 <tr *ngFor="let match of twentyMatches">
                                     <td>{{ match.MatchNo }}</td>
                                     <td>{{ match.Venue }}</td>
@@ -84,7 +84,7 @@
                 <div class="col-md-12">
                     <div class="fixtures">
                         <table width="100%" class="table table-hover">
-                            <thead class="thead-primary">
+                            <thead class="thead-primary table-content">
                             <tr>
                                 <th>MatchNo</th>
                                 <th>Venue</th>
@@ -92,7 +92,7 @@
                                 
                             </tr>
                             </thead>
-                            <tbody class="table-striped">
+                            <tbody class="table-striped table-content">
                                 <tr *ngFor="let match of testmatche">
                                     <td>{{ match.MatchNo }}</td>
                                     <td>{{ match.Venue }}</td>
