--- a/src/app/fixture/fixture.component.html
+++ b/src/app/fixture/fixture.component.html
@@ -4,15 +4,15 @@
 
     <img width="200" alt="Angular Logo" src="/assets/wi.png">
       </div>
-<ul class="nav nav-pills nav-fill nav-margin border border-primary">
-    <li class="nav-item border border-primary" >
-      <a class="nav-link nav-item" [class.active]="viewMode == 'odi'" (click)="viewMode='odi'" >ODI</a>
+<ul class="nav nav-pills nav-fill nav-margin border border-primary ">
+    <li class="nav-item border border-primary " >
+      <a class="nav-link nav-item nav-border-tab" [class.active]="viewMode == 'odi'" (click)="viewMode='odi'" >ODI</a>
     </li>
     <li class="nav-item border border-primary" >
-      <a class="nav-link" [class.active]="viewMode == 'test'" (click)="viewMode='test'">TEST</a>
+      <a class="nav-link nav-border-tab" [class.active]="viewMode == 'test'" (click)="viewMode='test'">TEST</a>
     </li>
     <li class="nav-item border border-primary" >
-      <a class="nav-link" [class.active]="viewMode == 'T20'" (click)="viewMode='T20'">T20</a>
+      <a class="nav-link nav-border-tab" [class.active]="viewMode == 'T20'" (click)="viewMode='T20'">T20</a>
     </li>
   </ul>
 
