--- a/src/app/fixture/fixture.component.html
+++ b/src/app/fixture/fixture.component.html
@@ -1,8 +1,8 @@
-
+<h1 class="title-header text-primary">West Indies tour of bangladesh 2018</h1>
  <div class="center image-position">
-  <img width="300" alt="Angular Logo" src="/assets/Bangladesh.png">
+  <img width="210" alt="Angular Logo" src="https://www.countryflags.io/bd/flat/64.png">
 
-    <img width="200" alt="Angular Logo" src="/assets/wi.png">
+    <img width="200" alt="Angular Logo" src="https://www.crwflags.com/fotw/images/i/int@wicb.gif">
       </div>
 <ul class="nav nav-pills nav-fill nav-margin border border-primary ">
     <li class="nav-item border border-primary " >
@@ -15,6 +15,9 @@
       <a class="nav-link nav-border-tab" [class.active]="viewMode == 'T20'" (click)="viewMode='T20'">T20</a>
     </li>
   </ul>
+
+
+
 
 
   <div [ngSwitch]="viewMode">
