--- a/src/app/fixture/fixture.component.html
+++ b/src/app/fixture/fixture.component.html
@@ -108,3 +108,20 @@
             </div></div>
     <div *ngSwitchDefault>Otherwise</div>
 </div>
+
+<div class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <p>
+                    Developed with love by <a target="_blank" href="https://github.com/Maharoz">Maharoz Alam</a> (<a target="_blank" href="https://sites.google.com/view/porfoliomaharoz/home">Mugdho)</a>
+                </p>
+            </div>
+            <div class="col-md-6 text-right">
+                <p>
+                    <a target="_blank" href="https://github.com/Maharoz/BangladeshVsWindiesFixture">Get Source Code</a>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
